# lattix-xfrontier

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.agent  Dockerfile.frontend  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  THREAT-MODEL.md  TODO.md  conftest.py  docker-compose.local.yml  docker-compose.override.yml  docker-compose.yml  package-lock.json  precommit.ps1  precommit.sh  pyproject.toml
.ai-memory/: README.md  memory-map.md  repo-profile.md
.artifacts/sbom/: repository.cdx.json
.artifacts/security/: gitleaks-report.json
.claude/: launch.json  settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  desktop-release.yml  pgvector-build.yml  release.yml  rollback.yml
agents/: AGENTS.md
agents/REGISTRY/: README.md  agents.registry.json
agents/ai-architect-eng-agent/: README.md  agent.config.json  system-prompt.md  url-manifest-ai-architect-eng.json
agents/blog-writer-agent/: README.md  agent.config.json  system-prompt.md  url-manifest-blog-writer.json
agents/brand-strategy-agent/: README.md  agent.config.json  system-prompt.md  url-manifest-brand-strategy.json
agents/ceo-strategy-agent/: README.md  agent.config.json  system-prompt.md  url-manifest-ceo-strategy.json
agents/cfo-agent/: README.md  agent.config.json  system-prompt.md  url-manifest-cfo.json
agents/chief-of-staff-agent/: README.md  agent.config.json  system-prompt.md  url-manifest-chief-of-staff.json
agents/cis-agent/: README.md  agent.config.json  system-prompt.md  url-manifest-cis-agent.json
agents/ciso-agent/: README.md  agent.config.json  system-prompt.md  url-manifest-ciso.json
agents/cmmc-2.0-agent/: README.md  agent.config.json  system-prompt.md  url-manifest-cmmc-2.0.json
agents/compliance-control-mapper/: README.md  agent.config.json  system-prompt.md  url-manifest-compliance-mapper.json
agents/customer-insights-agent/: README.md  agent.config.json  system-prompt.md  url-manifest-customer-insights.json
agents/customer-success-agent/: README.md  agent.config.json  system-prompt.md  url-manifest-customer-success.json
agents/data-architect-eng-agent/: README.md  agent.config.json  system-prompt.md  url-manifest-data-architect-eng.json
agents/developer-agent/: README.md  agent.config.json  system-prompt.md  url-manifest-developer.json
agents/devops-platform-agent/: README.md  agent.config.json  system-prompt.md  url-manifest-devops-platform.json
agents/fundraising-agent/: README.md  agent.config.json  system-prompt.md  url-manifest-fundraising.json
agents/general-counsel-agent/: README.md  agent.config.json  system-prompt.md  url-manifest-general-counsel.json
agents/government-contract-agent/: README.md  agent.config.json  system-prompt.md  url-manifest-gov-contract.json
agents/grants-rfp-agent/: README.md  agent.config.json  system-prompt.md  url-manifest-grants-rfp.json
agents/incident-handler-agent/: README.md  agent.config.json  system-prompt.md  url-manifest-incident-handler.json
agents/iso27001-agent/: README.md  agent.config.json  system-prompt.md  url-manifest-iso-27001.json
agents/learning-development-agent/: README.md  agent.config.json  system-prompt.md  url-manifest-learning-development.json
agents/market-intelligence-agent/: README.md  agent.config.json  system-prompt.md  url-manifest-market-intel.json
agents/marketing-agent/: README.md  agent.config.json  system-prompt.md  (+1 more)
apps/desktop-tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/loading/: index.html
apps/desktop-tauri/src-tauri/src/: main.rs
apps/evals/: README.md  pyproject.toml
apps/evals/frontier_evals/: __init__.py  cli.py  config.py  datasets.py  docker_env.py  grading.py  model_client.py  report.py  runner.py  stats.py  swebench_grader.py
docs/: AGENT_DEVELOPMENT.md  API.md  ARCHITECTURE.md  COLOUMN_LAYER_IMPLEMENTATION_PLAN.md  DEPLOYMENT.md  FOSS_RELEASE.md  INSTALLER.md  Lattix Frontier - Architecture.docx  MVP.md  SANDBOXING.md  SECURITY.md  SYSTEM-ARCHITECTURE.md  competitive-gap-analysis-2026-06.md  daytona-cloud-multitenant-adoption.md  enterprise-node-taxonomy.md  frontend-auth-mock-fallback-fix.md  frontier-agent-schema.md  harness-implementation-status.md  isolation-layers.md  linear_backlog.csv  primary-dev-flow-roadmap.md  production-harness-plan.md  reactflow-node-specs-and-execution-design.md  reference-platforms-integration-plan.md  resource-efficiency-plan.md  swe-bench-runner-setup.md  task-workspace-binding.md
docs/perf/: README.md
envoy/: envoy.yaml
frontier_runtime/: __init__.py  agents.py  assembly_runner.py  cognition.py  cognitive.py  config.py  context_dedup.py  conversation.py  envelope.py  events.py  federation.py  guardrails.py  install.py  mcp.py  orchestrator.py  persistence.py  sandbox.py  security.py  session_notes.py  win_sandbox.py
frontier_tooling/: __init__.py  cli.py  common.py  desktop.py  desktop_firstrun.py  desktop_main.py  installer.py  native_binaries.py  native_launcher.py  native_secrets.py
install/: bootstrap.ps1  bootstrap.sh  frontier-installer.py  manifest.json
lattix_frontier/: __init__.py  cli.py  config.py
packaging/: frontier-backend.spec
policies/: agent_policy.rego  budget_policy.rego  data_classification.rego  filesystem_access.rego  network_egress.rego  network_policy.rego  tool_jail.rego
runtime/: README.md  run_demo.py  run_dynamic.py  run_l3.py  run_remote.py  run_spec.py
scripts/: assign_tags_from_architecture.py  build-desktop.ps1  build_registry.py  build_release_bundle.py  bulk_update_agents.py  frontier.ps1  normalize_manifests_and_defaults.py  resource-baseline.ps1  resource-baseline.sh  run_opa.py  scaffold_agent.py  scaffold_agent_files.py  scaffold_agent_service.py  seed_vault.py  verify_event_chain.py
templates/: SUBSCRIBER_TEMPLATE.py  agent.runtime.example.json  envelope.schema.json  workflow.example.json
tests/: conftest.py
(+628 files in other folders)
