[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "lattix-frontier"
version = "0.1.0"
description = "Lattix xFrontier open-source orchestration and control plane"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Lattix" }
]
dependencies = [
  "PyJWT[crypto]>=2.10.1",
  "click>=8.1.7",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "presidio-analyzer>=2.2.355",
  "hvac>=2.3.0",
  "langgraph>=0.3.0",
  "langgraph-checkpoint-postgres>=2.0.0",
  "nats-py>=2.10.0",
  "opentelemetry-api>=1.30.0",
  "opentelemetry-exporter-otlp>=1.30.0",
  "opentelemetry-sdk>=1.30.0",
  "opa-python-client>=0.2.3",
  "psycopg>=3.2.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.0.1",
  "redis>=5.2.1",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.34.0",
  "zeroconf>=0.145.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.0"
]
security = [
  "biscuit-auth>=4.0.0",
  "gliner>=0.2.16"
]
maf = [
  "microsoft-agent-framework @ git+https://github.com/microsoft/agent-framework-python.git"
]

[project.scripts]
lattix = "frontier_tooling.cli:cli"
frontier-installer = "frontier_tooling.installer:main"

[tool.hatch.build.targets.wheel]
packages = ["frontier_tooling", "frontier_runtime"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E402", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
plugins = []

[tool.pytest.ini_options]
testpaths = ["apps/backend/tests", "tests"]
