[package]
name = "lattix-xfrontier-desktop"
version = "0.1.0"
description = "Lattix xFrontier desktop shell"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
# Auto-update (tauri-plugin-updater) is deferred — it needs a minisign signing
# key at build time. Re-add it + a real updater capability + pubkey for releases.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# By default Tauri uses a custom protocol; `custom-protocol` is required for release builds.
custom-protocol = ["tauri/custom-protocol"]
